# daw

./: Cargo.toml  README.md  note.toml
.VSCodeCounter/2023-03-03_18-11-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Projects/ExampleProject/: example.project  example.track  fade.effect  reverb.effect
Projects/TestProject/: fade.effect  reverb.effect  test.project  test.track  test_project.project
Projects/TheLick/: lick.project  lick.track
src/: lib.rs  libtype_extension_fun.rlib  main.rs  note_freqs.rs  project.rs  tests.rs  unit_tests.rs
src/project/: resample.rs  time.rs  track.rs  track_type.rs  wav_settings.rs  wav_writer.rs  wave.rs  waveform.rs
src/project/track/: effect.rs  midi.rs  raw_samples.rs  score.rs  track_data.rs  track_data_type.rs
src/project/track/midi/: dynamics.rs  instrument.rs  midi_toml.rs  note.rs  pitch.rs  toml.rs
src/project/track/raw_samples/: basic_waveforms.rs  channels.rs  fade.rs  modifiers.rs  modulators.rs  pitch_shift.rs  reverb.rs  timbres.rs
src/project/track/track_data/: midi.rs  raw_samples.rs  score.rs
src/project/track/track_data_type/: midi.rs  raw_samples.rs  score.rs
src/project/track/track_data_type/raw_samples/: basic_waveforms.rs  modifiers.rs  timbres.rs
src/project/wav_writer/: format.rs  raw_sample_writer.rs  resample.rs  sample_conversion.rs
src/tests/: misc_tests.rs  unit_tests.rs
